--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: ruby
+
 rvm:
   - 2.2.5
-  - jruby
-  - rbx-2
+bundle_args: --without production
+
+services:
+  - postgresql
+
+before_script:
+  - psql -c 'create database competition_tracker_test;' -U postgres
