--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ services:
   - postgresql
 
 before_script:
-  - psql -c 'create database competition_tracker_test;' -U postgres
+  - psql -c 'create database flight_test;' -U postgres
