--- a/.gitignore
+++ b/.gitignore
@@ -15,12 +15,7 @@
 !/log/.keep
 /tmp
 
-
-# Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
+secrets.yml
 
 # Ignore coverage report
 /coverage
-
